# azure-cli-2.83.0-content

./: azure-pipelines.yml  linter_exclusions.yml
.azure-pipelines/: macos-standalone-release.yml
.azure-pipelines/templates/macos/: macos-publish-jobs.yml
.devcontainer/: .env  devcontainer.json  init.sh  mcp.json
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: what_if.yml
.github/policies/: resourceManagement.yml
.github/workflows/: RunIssueSentinel.yml  TriggerReferenceDocsCI.yml
build_scripts/windows/: Product.wxs
build_scripts/windows/scripts/: build.cmd
doc/: command_guidelines.md  hands_on_codespace.md  install_linux_prerequisites.md  scrum-master's-playbook.md
doc/debug/: debug_in_vs_code.md
doc/extensions/: authoring.md
doc/sphinx/azhelpgen/: doc_source_map.json
scripts/ci/credscan/: CredScanSuppressions.json
scripts/live_test/: CLITest.yml
scripts/release/debian/: build.sh
scripts/release/macos/: build_binary_tar_gz.py
src/azure-cli/: HISTORY.rst  requirements.py3.Darwin.txt  requirements.py3.Linux.txt  requirements.py3.MacOS.txt  requirements.py3.windows.txt  setup.py
src/azure-cli-core/: HISTORY.rst  setup.py
src/azure-cli-core/azure/cli/core/auth/: identity.py
src/azure-cli-core/azure/cli/core/tests/: test_argcomplete.py  test_telemetry.py  test_util.py
src/azure-cli-telemetry/: setup.py
src/azure-cli-testsdk/: setup.py
tools/aaz-flow/: CHANGELOG.md  README.md  pyproject.toml
tools/aaz-flow/src/aaz-flow/: __init__.py  helpers.py  main.py  models.py  prompt_templates.py  testgen.py
(+1572 files in other folders)
